<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pointer</string>
    <string name="app_about_title">Pointer v.0.1</string>
    <string name="app_about_project">Pointer is a brand new project that allows young and motivated people to have an instant blind date.\nVisit our website to get invitation codes and more.</string>
    <string name="app_about_website">Visit Website</string>
    <string name="pointer_website_url">http://www.pointer-app.com</string>
    <string name="menu_auth_about">About project</string>
    <string name="menu_legalnotices">Legal Notices</string>
    <string name="hello_world">Hello world!</string>
    <string name="auth_screen_point">Point</string>
    <string name="auth_screen_reg">Register</string>
    <string name="reg_screen_hint">Enter invitation code</string>
    <string name="reg_screen_check">Check</string>
    <string name="reg_screen_incorrect_toast">Invalid invitation code</string>
    <string name="googleplus">Google+</string>
    <string name="facebook">Facebook</string>
    <string name="auth_screen_welcome">Welcome to Pointer</string>
    <string name="login_screen_title">Authorize to Pointer</string>
    <string name="reg_screen_step_1">Registration: Step 1</string>
    <string name="reg_screen_step_2">Registration: Step 2</string>
    <string name="reg_screen_step_3">Registration: Step 3</string>
    <string name="reg_info_screen_name">Name:</string>
    <string name="reg_info_screen_surename">Surename:</string>
    <string name="reg_info_screen_email">E-mail:</string>
    <string name="reg_info_screen_info">You will be notified after the application launch and an invitation code will be provided for you :)</string>
    <string name="reg_info_screen_complete">Registration is complete. Check your information below:</string>
    <string name="reg_info_screen_thanks">Thank you!</string>

</resources>