<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/city_04"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/simplemap" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/login_screen_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/googleplus" />

        <Button
            android:id="@+id/login_screen_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook" />
    </LinearLayout>

    <Button
        android:id="@+id/login_screen_reg"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_screen_reg"
        android:typeface="serif" />

</LinearLayout>